
---

# `pyproject.toml`

```toml
[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "qrae"
version = "0.1.0"
description = "Authorized post-quantum cryptography readiness assessment toolkit"
readme = "README.md"
requires-python = ">=3.11"
license = "AGPL-3.0-or-later"
authors = [{ name = "WiewiorkaWorks" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
]
dependencies = [
    "cryptography>=42.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
]
pcap = [
    "scapy>=2.5",
]
quantum = [
    "qiskit>=1.0",
    "qiskit-aer>=0.14",
]

[project.scripts]
qrae = "qrae.cli:main"

[project.urls]
Homepage = "https://github.com/FaridSuleymanov/QRAE"
Issues = "https://github.com/FaridSuleymanov/QRAE/issues"

[tool.hatch.build.targets.wheel]
packages = ["qrae"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
